fixed apod card layout issue, added alt text for apod image

--- a/src/styles.css
+++ b/src/styles.css
@@ -110,6 +110,8 @@ main{
     font-size: 1.6rem;
     font-weight: 200;
     overflow-wrap: break-word;
+    overflow-y: scroll;
+    margin-bottom: 2rem;
 }
 
 
